# elc-snow-util

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  snowutil.sh
snowboard/: __init__.py  cli.py  client.py  commands.py  config.py  elc_utils.py  tables.py
snowboard/apis/: table_api.py
snowman/: __init__.py  cli.py  client.py  commands.py  config.py  queries.py
snowman/apis/: table_api.py
tests/: conftest.py  test_client.py  test_config.py  test_tables.py
