[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elc-snow-util"
version = "1.0.0"
authors = [
  { name="Dan Davis", email="daniel.davis@wipro.com" },
]
description = "Python CLI including reports and backend scripts for the Employee Center"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openpyxl",
    "requests",
    "pandas",
    "pydantic",
    "progress",
    "pyaml",
    "python-magic; sys_platform != 'win32'",
    "python-magic-bin; sys_platform == 'win32'",
]

[project.scripts]
elc-snow-util = "snowboard.cli:main"

[project.urls]
"Homepage" = "https://github.com/buildit/elc-snow-util"
"Bug Tracker" = "https://github.com/buildid/elc-snow-util/elc-snow-util"
